2010-01-27  Rudy Neeser  <rudy.neeser@gmail.com>

	* matrix.lisp (matrix=): Added a function to compare matrix
	objects.

	* generics.lisp (copy): Added an implementation that copies lists.
	(equivalent): Added a generic function to test for equivalence
	between two objects. 

	* vector.lisp (dimension): Renamed LENGTH to DIMENSION.
	(length): Created a new LENGTH function that is an alias to
	DIMENSION.
	(negate!): Added this for lists.

2010-01-26  Rudy Neeser  <rudy.neeser@gmail.com>

	* COPYING: Added a copy of the GPLv3.

	* LICENSE: Added the beginnings of a file discussing licensing.

	* README: Added the beginnings of a README file.

	* vector-operations.lisp (dot-product): Dot product can now
	operate on lists.
	(euclidean-distance): Updated to work with lists.

2010-01-22  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (normalise): Provided a version that operates on
	lists.
	(normalise!): Provided a version that operates on lists.

2009-12-18  Rudy Neeser  <rudy.neeser@gmail.com>

	* package.lisp (#:l-math): Exported  *equivalence-tolerance*.

	* tests.lisp (test-nonzero): Updated to
	use *equivalence-tolerance*.

	* vector.lisp (vector=): Updated to use *equivalence-tolerance*.

	* generics.lisp (*equivalence-tolerance*): Added a variable that
	defines how similar objects should be before they are considered
	equal.

2009-12-16  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (vector=): Modifed to allow lists.

	* matrix.lisp (matrix): Changed precision to double-float.

	* vector.lisp (vector): Changed precision to double-float.

	* vector-operations.lisp (angle-between): Increased precision in
	this function to use double-floats. Now the angle between 90
	degree vectors is reported as exactly 90 degrees.

2009-12-15  Rudy Neeser  <rudy.neeser@gmail.com>

	* vector.lisp (norm): Added a version of NORM to operate on lists.

	* tests.lisp (test-nonzero): A test for methods to easily signal a
	condition when its argument has a zero norm.
