@@ -2,10 +2,11 @@
 
 	* matrix.lisp (matrix=): Added a function to compare matrix
 	objects.
+	(dimension): Added an implementation for MATRIX objects.
 
 	* generics.lisp (copy): Added an implementation that copies lists.
 	(equivalent): Added a generic function to test for equivalence
-	between two objects. 
+	between two objects.
 
 	* vector.lisp (dimension): Renamed LENGTH to DIMENSION.
 	(length): Created a new LENGTH function that is an alias to
